trunk/Archive2/61/802cbb3200e0ce/output
main.cpp: In function 'const Matrix operator*(double, const Matrix&)':
main.cpp:12:18: error: 'unsigned int Matrix::rows' is protected
     unsigned int rows, columns;
                  ^
main.cpp:300:38: error: within this context
     for( unsigned int i = 0; i < rhs.rows; i++ )
                                      ^
main.cpp:12:24: error: 'unsigned int Matrix::columns' is protected
     unsigned int rows, columns;
                        ^
main.cpp:302:42: error: within this context
         for( unsigned int j = 0; j < rhs.columns; j++ )
                                          ^
main.cpp:305:9: error: expected ';' before '}' token
         }
         ^
